Location Link Fix

--- a/public/oilchanges/index.html
+++ b/public/oilchanges/index.html
@@ -117,7 +117,7 @@ Conventional, Synthetic Blend &amp; Full Synthetic Oil Changes – Using high-qu
           </li>
           
           <li class="list f5 f4-ns fw4 dib pr3">
-            <a class="hover-white no-underline white-90" href="/location" title="Location page">
+            <a class="hover-white no-underline white-90" href="/ourlocation" title="Location page">
               Location
             </a>
           </li>
