--- a/public/autobody/index.html
+++ b/public/autobody/index.html
@@ -116,7 +116,7 @@ Panel Replacement &amp; Repair – Fixing or replacing damaged fenders, doors, a
           </li>
           
           <li class="list f5 f4-ns fw4 dib pr3">
-            <a class="hover-white no-underline white-90" href="/location" title="Location page">
+            <a class="hover-white no-underline white-90" href="/ourlocation" title="Location page">
               Location
             </a>
           </li>
