--- a/public/autorepair/index.html
+++ b/public/autorepair/index.html
@@ -190,7 +190,7 @@ Engine Diagnostics &amp; Repair Your engine is the heart of your vehicle, and wh
     <footer class="bg-black bottom-0 w-100 pa3" role="contentinfo">
   <div class="flex justify-between">
   <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="https://oakdaleautorepair.com/" >
-    &copy;  Oakdale Auto Repair (209) 318-9352 2025
+    Oakdale Auto Repair, 1011 Post Road Unit C, Oakdale, CA
   </a>
     <div></div>
   </div>
