--- a/public/index.html
+++ b/public/index.html
@@ -153,7 +153,7 @@ With over 25 years of experience, Chris Holmes is an ASE Master Certified Techni
     <footer class="bg-black bottom-0 w-100 pa3" role="contentinfo">
   <div class="flex justify-between">
   <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="https://oakdaleautorepair.com/" >
-    &copy;  Oakdale Auto Repair (209) 318-9352 2025
+    Oakdale Auto Repair, 1011 Post Road Unit C, Oakdale, CA
   </a>
     <div></div>
   </div>
