--- a/public/ourlocation/index.html
+++ b/public/ourlocation/index.html
@@ -149,8 +149,8 @@ Directions from Downtown Oakdale: Start by heading southeast on S Yosemite Ave. 
         </h1>
       </header>
       <div class="nested-copy-line-height lh-copy f4 nested-links mid-gray">
-        <p><img src="/images/map.png" alt="location">
-1011 C Post Road</p>
+        <p><img src="/images/map.png" alt="location"></p>
+<p>1011 C Post Road</p>
 <h1 id="find-us-at-oakdale-auto-repair--paint"><strong>Find Us at Oakdale Auto Repair &amp; Paint</strong></h1>
 <p>Getting to <strong>Oakdale Auto Repair &amp; Paint</strong> is simple! Follow these easy directions to reach our shop:</p>
 <h3 id="directions-from-downtown-oakdale"><strong>Directions from Downtown Oakdale:</strong></h3>
