added footer ase

--- a/public/autobody/index.html
+++ b/public/autobody/index.html
@@ -170,6 +170,7 @@ Panel Replacement &amp; Repair – Fixing or replacing damaged fenders, doors, a
 <li><strong>Customer Satisfaction Guarantee</strong> &ndash; We stand behind our work with a commitment to excellence.</li>
 </ul>
 <p>At <strong>Oakdale Auto Repair &amp; Paint</strong>, we bring your vehicle back to life with expert autobody and paint services. <strong>Contact us today for an estimate!</strong></p>
+<p><img src="/images/ICAR-ASE.png" alt="We Employ ASE Trained Technicians"></p>
 
       </div>
     </article>
