--- a/public/autorepair/index.html
+++ b/public/autorepair/index.html
@@ -181,6 +181,7 @@ Engine Diagnostics &amp; Repair Your engine is the heart of your vehicle, and wh
 <li><strong>Honest &amp; Transparent Service</strong> &ndash; Providing clear explanations and fair pricing.</li>
 </ul>
 <p>At <strong>Oakdale Auto Repair</strong>, we&rsquo;re committed to providing expert repairs with quality and integrity. <strong>Contact us today to schedule an appointment and get your vehicle back on the road!</strong></p>
+<p><img src="/images/ICAR-ASE.png" alt="We Employ ASE Trained Technicians"></p>
 
       </div>
     </article>
