--- a/public/oilchanges/index.html
+++ b/public/oilchanges/index.html
@@ -177,6 +177,7 @@ Conventional, Synthetic Blend &amp; Full Synthetic Oil Changes – Using high-qu
 <li><strong>Quick &amp; Convenient Service</strong> &ndash; Get back on the road fast with efficient maintenance.</li>
 </ul>
 <p>At <strong>Oakdale Auto Repair</strong>, we make routine maintenance easy and hassle-free. <strong>Stop by today or schedule your next service appointment!</strong></p>
+<p><img src="/images/ICAR-ASE.png" alt="We Employ ASE Trained Technicians"></p>
 
       </div>
     </article>
