Adding google advertising

--- a/public/index.html
+++ b/public/index.html
@@ -124,6 +124,15 @@ With over 25 years of experience, Chris Holmes is an ASE Master Certified Techni
       </div>
     </div>
   </header>
+  
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16920169294"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-16920169294');
+</script>
 
 
     <main class="pb7" role="main">
