--- a/public/404.html
+++ b/public/404.html
@@ -109,6 +109,15 @@
 
     </div>
   </header>
+  
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16920169294"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-16920169294');
+</script>
 
 
     <main class="pb7" role="main">
