--- a/public/ourlocation/index.html
+++ b/public/ourlocation/index.html
@@ -137,6 +137,15 @@ Directions from Downtown Oakdale: Start by heading southeast on S Yosemite Ave. 
 
     </div>
   </header>
+  
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16920169294"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-16920169294');
+</script>
 
 
     <main class="pb7" role="main">
