--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@ With over 25 years of experience, Chris Holmes is an ASE Master Certified Techni
 
     
 
-  <header>
+  <header><br>
     <div class="pb2-m pb2-l bg-black">
       <nav class="pv3 ph3 ph4-ns" role="navigation">
   <div class="flex-l content-between items-center center">
