--- a/public/autobody/index.html
+++ b/public/autobody/index.html
@@ -94,7 +94,8 @@ Panel Replacement &amp; Repair – Fixing or replacing damaged fenders, doors, a
     <a href="/" class="f3 fw2 hover-white no-underline white-90 dib">
       
         Oakdale Auto Repair - 1011 C Post Rd
-        <br>
+        </P>
+        <P>1011 Post Road Unit C</P>
       
     </a>
     <br>
