--- a/public/autorepair/index.html
+++ b/public/autorepair/index.html
@@ -85,7 +85,8 @@ Engine Diagnostics &amp; Repair Your engine is the heart of your vehicle, and wh
     <a href="/" class="f3 fw2 hover-white no-underline white-90 dib">
       
         Oakdale Auto Repair - 1011 C Post Rd
-        <br>
+        </P>
+        <P>1011 Post Road Unit C</P>
       
     </a>
     <br>
