--- a/public/404.html
+++ b/public/404.html
@@ -73,7 +73,8 @@
     <a href="/" class="f3 fw2 hover-white no-underline white-90 dib">
       
         Oakdale Auto Repair - 1011 C Post Rd
-        <br>
+        </P>
+        <P>1011 Post Road Unit C</P>
       
     </a>
     <br>
