--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,8 @@ With over 25 years of experience, Chris Holmes is an ASE Master Certified Techni
     <a href="/" class="f3 fw2 hover-white no-underline white-90 dib">
       
         Oakdale Auto Repair - 1011 C Post Rd
-        <br>
+        </P>
+        <P>1011 Post Road Unit C</P>
       
     </a>
     <br>
