--- a/public/ourlocation/index.html
+++ b/public/ourlocation/index.html
@@ -101,7 +101,8 @@ Directions from Downtown Oakdale: Start by heading southeast on S Yosemite Ave. 
     <a href="/" class="f3 fw2 hover-white no-underline white-90 dib">
       
         Oakdale Auto Repair - 1011 C Post Rd
-        <br>
+        </P>
+        <P>1011 Post Road Unit C</P>
       
     </a>
     <br>
