--- a/public/oilchanges/index.html
+++ b/public/oilchanges/index.html
@@ -91,7 +91,7 @@ Conventional, Synthetic Blend &amp; Full Synthetic Oil Changes – Using high-qu
   <header class="cover bg-center" style="background-image: url('https://oakdaleautorepair.com/images/OilChange.jpg');">
     <div class="bg-black-60">
       <nav class="pv3 ph3 ph4-ns" role="navigation">
-  <div class="flex-l flex-center items-center center">
+  <div class="flex-l flex-column items-center center">
     <a href="/" class="f3 fw2 hover-white no-underline white-90 dib">
       
         Oakdale Auto Repair
