--- a/public/ourlocation/index.html
+++ b/public/ourlocation/index.html
@@ -97,8 +97,8 @@ Directions from Downtown Oakdale: Start by heading southeast on S Yosemite Ave. 
     <br>
     <div class="bg-black">
       <nav class="pv3 ph3 ph4-ns" role="navigation">
-  <div class="flex-l flex-column items-center center">
-    <a href="/" class="f3 fw2 hover-white no-underline white-90 dib">
+  <div class="flex flex-column items-center center">
+    <a href="/" class="center f3 fw2 hover-white no-underline white-90 dib">
       
         Oakdale Auto Repair
         </P>
