--- a/public/autobody/index.html
+++ b/public/autobody/index.html
@@ -90,8 +90,8 @@ Panel Replacement &amp; Repair – Fixing or replacing damaged fenders, doors, a
   <header class="cover bg-center" style="background-image: url('https://oakdaleautorepair.com/images/collision.jpg');">
     <div class="bg-black-60">
       <nav class="pv3 ph3 ph4-ns" role="navigation">
-  <div class="flex-l flex-column items-center center">
-    <a href="/" class="f3 fw2 hover-white no-underline white-90 dib">
+  <div class="flex flex-column items-center center">
+    <a href="/" class="center f3 fw2 hover-white no-underline white-90 dib">
       
         Oakdale Auto Repair
         </P>
