--- a/public/autorepair/index.html
+++ b/public/autorepair/index.html
@@ -81,8 +81,8 @@ Engine Diagnostics &amp; Repair Your engine is the heart of your vehicle, and wh
   <header class="cover bg-center" style="background-image: url('https://oakdaleautorepair.com/images/bannerB.jpg');">
     <div class="bg-black-60">
       <nav class="pv3 ph3 ph4-ns" role="navigation">
-  <div class="flex-l flex-column items-center center">
-    <a href="/" class="f3 fw2 hover-white no-underline white-90 dib">
+  <div class="flex flex-column items-center center">
+    <a href="/" class="center f3 fw2 hover-white no-underline white-90 dib">
       
         Oakdale Auto Repair
         </P>
