--- a/public/index.html
+++ b/public/index.html
@@ -79,8 +79,8 @@ With over 25 years of experience, Chris Holmes is an ASE Master Certified Techni
   <header>
     <div class="pb2-m pb2-l bg-black">
       <nav class="pv3 ph3 ph4-ns" role="navigation">
-  <div class="flex-l flex-column items-center center">
-    <a href="/" class="f3 fw2 hover-white no-underline white-90 dib">
+  <div class="flex flex-column items-center center">
+    <a href="/" class="center f3 fw2 hover-white no-underline white-90 dib">
       
         Oakdale Auto Repair
         </P>
