--- a/public/index.html
+++ b/public/index.html
@@ -80,11 +80,11 @@ With over 25 years of experience, Chris Holmes is an ASE Master Certified Techni
     <div class="pb2-m pb2-l bg-black">
       <nav class="pv3 ph3 ph4-ns" role="navigation">
   <div class="flex flex-column items-center center">
-    <a href="/" class="center f3 fw2 hover-white no-underline white-90 dib">
+    <a href="/" class="center f3 fw2 hover-white no-underline white-90">
       
         Oakdale Auto Repair
         </P>
-        <P class="center f2 fw1">1011 Post Road Unit C</P>
+        <P class="center f4">1011 Post Road Unit C</P>
       
     </a>
     <br>
