--- a/public/oilchanges/index.html
+++ b/public/oilchanges/index.html
@@ -92,11 +92,11 @@ Conventional, Synthetic Blend &amp; Full Synthetic Oil Changes – Using high-qu
     <div class="bg-black-60">
       <nav class="pv3 ph3 ph4-ns" role="navigation">
   <div class="flex flex-column items-center center">
-    <a href="/" class="center f3 fw2 hover-white no-underline white-90 dib">
+    <a href="/" class="center f3 fw2 hover-white no-underline white-90">
       
         Oakdale Auto Repair
         </P>
-        <P class="center f2 fw1">1011 Post Road Unit C</P>
+        <P class="center f4">1011 Post Road Unit C</P>
       
     </a>
     <br>
