--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@ With over 25 years of experience, Chris Holmes is an ASE Master Certified Techni
   <header>
     <div class="pb2-m pb2-l bg-black">
       <nav class="pv3 ph3 ph4-ns" role="navigation">
-  <div class="flex flex-column items-center center">
+  <div class="flex flex-center items-center center">
     <a href="/" class="center f2 fw2 hover-white no-underline white-90">
       
         Oakdale Auto Repair
@@ -152,8 +152,7 @@ With over 25 years of experience, Chris Holmes is an ASE Master Certified Techni
         </h1>
       </header>
       <div class="nested-copy-line-height lh-copy f4 nested-links mid-gray">
-        <!-- raw HTML omitted -->
-<p><img src="/images/FullResto.jpg" alt="Restored GMC C10"></p>
+        <p><img src="/images/FullResto.jpg" alt="Restored GMC C10"></p>
 <h2 id="welcome-to-oakdale-auto-repair--paint"><strong>Welcome to Oakdale Auto Repair &amp; Paint</strong></h2>
 <p>At <strong>Oakdale Auto Repair &amp; Paint</strong>, we believe that every driver deserves <strong>honest, high-quality automotive care</strong> from technicians they can trust. Founded by <strong>Chris Holmes</strong> and <strong>Aaron Jelsma</strong>, our shop was built on the principles of integrity, expertise, and dedication to our customers.</p>
 <p>With <strong>over 25 years of experience</strong>, <strong>Chris Holmes</strong> is an <strong>ASE Master Certified Technician</strong>, specializing in <strong>advanced diagnostics, engine repairs, and complex mechanical issues</strong>. His passion for problem-solving has helped countless drivers get their vehicles back on the road when other shops couldn&rsquo;t find the issue.</p>
