--- a/public/ourlocation/index.html
+++ b/public/ourlocation/index.html
@@ -97,7 +97,7 @@ Directions from Downtown Oakdale: Start by heading southeast on S Yosemite Ave. 
     <br>
     <div class="bg-black">
       <nav class="pv3 ph3 ph4-ns" role="navigation">
-  <div class="flex flex-column items-center center">
+  <div class="flex flex-center items-center center">
     <a href="/" class="center f2 fw2 hover-white no-underline white-90">
       
         Oakdale Auto Repair
