--- a/public/index.html
+++ b/public/index.html
@@ -159,7 +159,7 @@ With over 25 years of experience, Chris Holmes is an ASE Master Certified Techni
 <p>We started <strong>Oakdale Auto Repair &amp; Paint</strong> because we wanted to bring <strong>honest repairs and expert diagnostics to everyday drivers</strong>. We know that dealing with car problems can be stressful, and too often, people feel like they&rsquo;re being misled or overcharged. That&rsquo;s why we take the time to explain every repair, provide transparent pricing, and ensure that every customer leaves our shop feeling confident about their vehicle.</p>
 <p>From <strong>engine repairs and transmission services</strong> to <strong>brakes, suspension, and custom autobody work</strong>, we are your <strong>one-stop shop</strong> for all things automotive. Whether you need routine maintenance, major repairs, or collision restoration, our team is here to deliver the highest level of service.</p>
 <p>At <strong>Oakdale Auto Repair &amp; Paint</strong>, we don&rsquo;t just fix cars&mdash;we take care of people. <strong>Call or visit us today and experience the difference of honest, expert automotive service.</strong></p>
-<!-- raw HTML omitted -->
+<p><img src="/images/ICAR-ASE.png" alt="We Employ ASE Trained Technicians"></p>
 
       </div>
     </article>
