--- a/public/index.html
+++ b/public/index.html
@@ -133,7 +133,7 @@ With over 25 years of experience, Chris Holmes is an ASE Master Certified Techni
 </nav>
 
       <div class="tc-l pv3 ph3 ph4-ns">
-        <img src="/images/banner.png">
+        <img src="/images/OakdaleAuto.png">
         
       </div>
     </div>
