Header and intro

--- a/public/404.html
+++ b/public/404.html
@@ -74,7 +74,7 @@
       
         Oakdale Auto Repair
         </p>
-        <p class="center f4">1011 Post Road Unit C. Oakdale, CA 95361
+        <p class="center f4">Complete Auto Maintenance & Repair
         </p>
       
     </a>
