--- a/public/ourlocation/index.html
+++ b/public/ourlocation/index.html
@@ -102,7 +102,7 @@ Directions from Downtown Oakdale: Start by heading southeast on S Yosemite Ave. 
       
         Oakdale Auto Repair
         </p>
-        <p class="center f4">1011 Post Road Unit C. Oakdale, CA 95361
+        <p class="center f4">Complete Auto Maintenance & Repair
         </p>
       
     </a>
