--- a/public/autobody/index.html
+++ b/public/autobody/index.html
@@ -95,7 +95,7 @@ Panel Replacement &amp; Repair – Fixing or replacing damaged fenders, doors, a
       
         Oakdale Auto Repair
         </p>
-        <p class="center f4">1011 Post Road Unit C. Oakdale, CA 95361
+        <p class="center f4">Complete Auto Maintenance & Repair
         </p>
       
     </a>
@@ -184,7 +184,7 @@ Panel Replacement &amp; Repair – Fixing or replacing damaged fenders, doors, a
 <li><strong>Customer Satisfaction Guarantee</strong> &ndash; We stand behind our work with a commitment to excellence.</li>
 </ul>
 <p>At <strong>Oakdale Auto Repair &amp; Paint</strong>, we bring your vehicle back to life with expert autobody and paint services. <strong>Contact us today for an estimate!</strong></p>
-<p><img src="/images/ICAR-ASE.png" alt="We Employ ASE Trained Technicians"></p>
+<p><img src="/images/ASE-ICAR-2.png" alt="We Employ ASE Trained Technicians"></p>
 
       </div>
     </article>
