--- a/public/oilchanges/index.html
+++ b/public/oilchanges/index.html
@@ -96,7 +96,7 @@ Conventional, Synthetic Blend &amp; Full Synthetic Oil Changes – Using high-qu
       
         Oakdale Auto Repair
         </p>
-        <p class="center f4">1011 Post Road Unit C. Oakdale, CA 95361
+        <p class="center f4">Complete Auto Maintenance & Repair
         </p>
       
     </a>
@@ -191,7 +191,7 @@ Conventional, Synthetic Blend &amp; Full Synthetic Oil Changes – Using high-qu
 <li><strong>Quick &amp; Convenient Service</strong> &ndash; Get back on the road fast with efficient maintenance.</li>
 </ul>
 <p>At <strong>Oakdale Auto Repair</strong>, we make routine maintenance easy and hassle-free. <strong>Stop by today or schedule your next service appointment!</strong></p>
-<p><img src="/images/ICAR-ASE.png" alt="We Employ ASE Trained Technicians"></p>
+<p><img src="/images/ASE-ICAR-2.png" alt="We Employ ASE Trained Technicians"></p>
 
       </div>
     </article>
