--- a/public/autobody/index.html
+++ b/public/autobody/index.html
@@ -95,7 +95,7 @@ Panel Replacement &amp; Repair – Fixing or replacing damaged fenders, doors, a
       
         Oakdale Auto Repair
         </p>
-        <p class="center f4">Complete Auto Maintenance & Repair
+        <p class="center f4">Complete Automotive Service, Maintenance, and Repair
         </p>
       
     </a>
