--- a/public/autorepair/index.html
+++ b/public/autorepair/index.html
@@ -86,7 +86,7 @@ Engine Diagnostics &amp; Repair Your engine is the heart of your vehicle, and wh
       
         Oakdale Auto Repair
         </p>
-        <p class="center f4">Complete Auto Maintenance & Repair
+        <p class="center f4">Complete Automotive Service, Maintenance, and Repair
         </p>
       
     </a>
