--- a/public/oilchanges/index.html
+++ b/public/oilchanges/index.html
@@ -96,7 +96,7 @@ Conventional, Synthetic Blend &amp; Full Synthetic Oil Changes – Using high-qu
       
         Oakdale Auto Repair
         </p>
-        <p class="center f4">Complete Automotive Service, Maintenance, and Repair
+        <p class="center f4">1011 Post Road, Oakdale, CA
         </p>
       
     </a>
