--- a/public/ourlocation/index.html
+++ b/public/ourlocation/index.html
@@ -102,7 +102,7 @@ Directions from Downtown Oakdale: Start by heading southeast on S Yosemite Ave. 
       
         Oakdale Auto Repair
         </p>
-        <p class="center f4">Complete Automotive Service, Maintenance, and Repair
+        <p class="center f4">1011 Post Road, Oakdale, CA
         </p>
       
     </a>
