--- a/public/404.html
+++ b/public/404.html
@@ -74,7 +74,7 @@
       
         Oakdale Auto Repair
         </p>
-        <p class="center f4">Complete Automotive Service, Maintenance, and Repair
+        <p class="center f4">1011 Post Road, Oakdale, CA
         </p>
       
     </a>
