--- a/public/ourlocation/index.html
+++ b/public/ourlocation/index.html
@@ -164,7 +164,7 @@ Directions from Downtown Oakdale: Start by heading southeast on S Yosemite Ave. 
         </h1>
       </header>
       <div class="nested-copy-line-height lh-copy f4 nested-links mid-gray">
-        <p><img src="/images/map.png" alt="location"></p>
+        <p><img src="/images/AutoRepairShop.jpg" alt="Garage"></p>
 <p>1011 C Post Road, Oakdale, CA</p>
 <h1 id="find-us-at-oakdale-auto-repair--paint"><strong>Find Us at Oakdale Auto Repair &amp; Paint</strong></h1>
 <p>Getting to <strong>Oakdale Auto Repair &amp; Paint</strong> is simple! Follow these easy directions to reach our shop:</p>
@@ -182,6 +182,7 @@ Directions from Downtown Oakdale: Start by heading southeast on S Yosemite Ave. 
 <li>If you pass <strong>Hedburg Way</strong>, you&rsquo;ve gone too far!</li>
 </ul>
 <p>We look forward to seeing you at <strong>Oakdale Auto Repair &amp; Paint</strong>. If you need further assistance, don&rsquo;t hesitate to <strong>call us for directions!</strong></p>
+<p><img src="/images/map.png" alt="location"></p>
 
       </div>
     </article>
