--- a/public/ourlocation/index.html
+++ b/public/ourlocation/index.html
@@ -93,9 +93,11 @@ Directions from Downtown Oakdale: Start by heading southeast on S Yosemite Ave. 
 
     
 
-  <header>
-    <br>
-    <div class="bg-black">
+  
+  
+  
+  <header class="cover bg-center" style="background-image: url('https://oakdaleautorepair.com/images/RepairShopFront.jpg');">
+    <div class="bg-black-60">
       <nav class="pv3 ph3 ph4-ns" role="navigation">
   <div class="flex justify-between items-center center">
     <a href="/" class="f3 fw2 hover-white no-underline white-90 dib">
@@ -150,6 +152,9 @@ Directions from Downtown Oakdale: Start by heading southeast on S Yosemite Ave. 
   </div>
 </nav>
 
+      <div class="tc-l pv6 ph3 ph4-ns">
+        
+      </div>
     </div>
   </header>
 
