--- a/public/autobody/index.html
+++ b/public/autobody/index.html
@@ -118,8 +118,8 @@ Panel Replacement &amp; Repair – Fixing or replacing damaged fenders, doors, a
           </li>
           
           <li class="list f5 f4-ns fw4 pr3">
-            <a class="hover-white no-underline white-90" href="/oilchanges" title="Oil Change &amp; Maintenance page">
-              Oil Change &amp; Maintenance
+            <a class="hover-white no-underline white-90" href="/oilchanges" title="Oil Changes Maintenance page">
+              Oil Changes Maintenance
             </a>
           </li>
           
