--- a/public/autorepair/index.html
+++ b/public/autorepair/index.html
@@ -109,8 +109,8 @@ Engine Diagnostics &amp; Repair Your engine is the heart of your vehicle, and wh
           </li>
           
           <li class="list f5 f4-ns fw4 pr3">
-            <a class="hover-white no-underline white-90" href="/oilchanges" title="Oil Change &amp; Maintenance page">
-              Oil Change &amp; Maintenance
+            <a class="hover-white no-underline white-90" href="/oilchanges" title="Oil Changes Maintenance page">
+              Oil Changes Maintenance
             </a>
           </li>
           
