--- a/public/oilchanges/index.html
+++ b/public/oilchanges/index.html
@@ -119,8 +119,8 @@ Conventional, Synthetic Blend &amp; Full Synthetic Oil Changes – Using high-qu
           </li>
           
           <li class="list f5 f4-ns fw4 pr3">
-            <a class="hover-white no-underline white-90" href="/oilchanges" title="Oil Change &amp; Maintenance page">
-              Oil Change &amp; Maintenance
+            <a class="hover-white no-underline white-90" href="/oilchanges" title="Oil Changes Maintenance page">
+              Oil Changes Maintenance
             </a>
           </li>
           
