--- a/public/ourlocation/index.html
+++ b/public/ourlocation/index.html
@@ -127,8 +127,8 @@ Directions from Downtown Oakdale: Start by heading southeast on S Yosemite Ave. 
           </li>
           
           <li class="list f5 f4-ns fw4 pr3">
-            <a class="hover-white no-underline white-90" href="/oilchanges" title="Oil Change &amp; Maintenance page">
-              Oil Change &amp; Maintenance
+            <a class="hover-white no-underline white-90" href="/oilchanges" title="Oil Changes Maintenance page">
+              Oil Changes Maintenance
             </a>
           </li>
           
