--- a/public/ourlocation/index.html
+++ b/public/ourlocation/index.html
@@ -104,7 +104,7 @@ Directions from Downtown Oakdale: Start by heading southeast on S Yosemite Ave. 
       
         Oakdale Auto Repair
         </p>
-        <p class="center f4">1011 Post Road, Oakdale, CA
+        <p class="center f4">Call [209-318-9352](tel:2093189352)
         </p>
       
     </a>
