--- a/public/autobody/index.html
+++ b/public/autobody/index.html
@@ -95,7 +95,7 @@ Panel Replacement &amp; Repair – Fixing or replacing damaged fenders, doors, a
       
         Oakdale Auto Repair
         </p>
-        <p class="center f4">1011 Post Road, Oakdale, CA
+        <p class="center f4">Call [209-318-9352](tel:2093189352)
         </p>
       
     </a>
