--- a/public/autorepair/index.html
+++ b/public/autorepair/index.html
@@ -86,7 +86,7 @@ Engine Diagnostics &amp; Repair Your engine is the heart of your vehicle, and wh
       
         Oakdale Auto Repair
         </p>
-        <p class="center f4">1011 Post Road, Oakdale, CA
+        <p class="center f4">Call [209-318-9352](tel:2093189352)
         </p>
       
     </a>
