--- a/public/oilchanges/index.html
+++ b/public/oilchanges/index.html
@@ -96,7 +96,7 @@ Conventional, Synthetic Blend &amp; Full Synthetic Oil Changes – Using high-qu
       
         Oakdale Auto Repair
         </p>
-        <p class="center f4">1011 Post Road, Oakdale, CA
+        <p class="center f4">Call [209-318-9352](tel:2093189352)
         </p>
       
     </a>
